# flask-shopify-utils

./: .flake8  .gitignore  CHANGELOGS.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: PluginForFlask.yml  python-app-check.yml
example/backend/app/: __init__.py  config.py
example/example1/: .env.example  .gitignore  README.md  package.json  shopify.app.toml
example/example1/.github/workflows/: BuildShopifyApp.yml  CI.yml
example/example1/backend/: .flake8  .gitignore  README.md  pyproject.toml  shopify.web.toml  wsgi.py
example/example1/backend/app/: __init__.py  config.py
example/example1/backend/app/models/: __init__.py  shopify.py
example/example1/backend/app/routes/: __init__.py
example/example1/backend/app/routes/extension/: __init__.py  delivery.py  payment.py
example/example1/backend/app/schemas/: __init__.py  default_mutation.py  default_query.py  mutation.py  query.py  shopify.py
example/example1/backend/app/scripts/: __init__.py  webhook.py
example/example1/backend/app/utils/: __init__.py  base.py  delivery_customization.py  klaviyo.py  payment_customization.py  telemetry.py
example/example1/backend/migrations/versions/: 3d1b6925999f_.py
example/example1/backend/requirements/: dev.txt  index.txt
example/example1/backend/tests/: conftest.py  test_admin_example.py  test_default_mutation.py  test_default_query.py  test_graphql_mutation.py  test_graphql_query.py  test_klaviyo.py
example/example1/backend/tests/snapshots/: create_discount_code.graphql  create_payment_customization.graphql  create_webhooks.graphql  delete_auto_discount.graphql  delete_delivery_customization.graphql  delete_discount_code.graphql  update_auto_discount.graphql  update_delivery_customization.graphql  update_discount_code.graphql  update_meta.graphql
example/example1/backend/tests/snapshots/default/: create_auto_discount.graphql  create_delivery_customization.graphql  delete_payment_customization.graphql  revoke_webhooks.graphql  update_multiple_meta.graphql  update_payment_customization.graphql
example/example1/frontend/admin/: .editorconfig  README.md  globals.d.ts  index.html  package.json  shopify.web.toml  vite.config.js  vite.config.mjs
example/example1/frontend/admin/src/: App.vue  main.js
example/example1/frontend/admin/src/components/extensions/: DeliveryCustomization.vue
example/example1/frontend/admin/src/extensions/: PaymentCustomization.vue
example/example1/frontend/admin/src/router/: index.js
example/example1/frontend/admin/src/stores/: index.js
example/example1/frontend/admin/src/views/: Index.vue
example/example2/: pyproject.toml  wsgi.py
requirements/: dev.txt  index.txt
src/flask_shopify_utils/: __init__.py  model.py  utils.py
src/flask_shopify_utils/cli/: __init__.py  main.py
tests/: conftest.py  test_admin_routes.py  test_alpha.py  test_cli_main.py  test_default_routes.py  test_gdpr_routes.py  test_graphql_cli.py  test_greet.py  test_hmac_calculate.py  test_init.py  test_ui_routes.py
