[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-shopify-utils"
description = "A Flask extension for Shopify app development"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Flask", "Extension", "Flask Extension", "Shopify", "Shopify-SDK", "SDK"]
authors = [
    {email = "leo.cxy88@gmail.com"},
    {name = "Leo Chen"}
]
maintainers = [
    {email = "leo.cxy88@gmail.com"},
    {name = "Leo Chen"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Flask"
]
dependencies = [
    "Flask < 4",
    "Flask-SQLAlchemy < 4",
    "ShopifyAPI == 12.7.0",
    "sgqlc < 17",
    "psutil < 8",
    "pytz == 2025.2",
    "requests < 3",
    "Cerberus < 2",
    "PyJWT < 3",
    "simplejson < 4"
]
dynamic = ["version"]

[project.scripts]
lazy-dog = "flask_shopify_utils.cli.main:copy_files"

[project.optional-dependencies]
dev = [
    "pytest < 9",
    "twine < 7",
    "build == 1.2.1"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = '-vs'
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.version]
path = "src/flask_shopify_utils/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[project.urls]
"Homepage" = "https://github.com/leocxy/flask-shopify-utils"
"Bug Tracker" = "https://github.com/leocxy/flask-shopify-utils/issues"