[metadata]
name = Flask-ShopifyUtils
version = attr: flask_shopify_utils.__version__
url = https://github.com/leocxy/flask-shopify-utils
license = MIT
license_files = LICENSE
author = Leo Chen
author_email = leo.cxy88@gmail.com
description = Some utils for Shopify that could be use in Flask
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir = = src
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
    Flask < 3
    Flask-SQLAlchemy == 3.0.5
    ShopifyAPI == 12.3.0
    sgqlc < 17
    psutil == 5.9.5
    pytz == 2023.3
    requests < 3
    Cerberus == 1.3.4
    PyJWT == 2.7.0

[options.packages.find]
where = src
